tests/bad/ident.ml
let _ =
  let a = 2 and a = 3 in
  42
